--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -19,6 +19,24 @@
 .navbar__brand {
   display: flex;
   align-items: center;
+  gap: 1rem;
+}
+
+.navbar__logo-link {
+  display: flex;
+  align-items: center;
+  text-decoration: none;
+  transition: opacity 0.2s ease;
+}
+
+.navbar__logo-link:hover {
+  opacity: 0.8;
+}
+
+.navbar__logo {
+  height: 40px;
+  width: auto;
+  object-fit: contain;
 }
 
 .navbar__title {
@@ -109,6 +127,18 @@
     flex-direction: column;
     height: auto;
     padding: 1rem 0;
+  }
+
+  .navbar__brand {
+    margin-bottom: 1rem;
+  }
+
+  .navbar__logo {
+    height: 35px;
+  }
+
+  .navbar__title {
+    font-size: 1.25rem;
   }
 
   .navbar__menu {
